@@ -1,5 +1,11 @@
 2008-12-02  Martin Leidig <mleidig@schlund.de>
 
+	* src/de/schlund/pfixxml/serverutil/SessionAdmin.java: added new
+	static method getTotalSessionNumber() which returns the total number
+	of sessions from all JMX-registered SessionAdmin instances.
+
+2008-12-02  Martin Leidig <mleidig@schlund.de>
+
 	Fixed issue with Tomcat port element naming.
 
 	* docs/docbook/src/reference/configuration.xml
